[gd_scene load_steps=5 format=3 uid="uid://d12fl1b235c3f"]

[ext_resource type="Script" uid="uid://boelyemrwrnwf" path="res://script/door.gd" id="1_hpvv5"]
[ext_resource type="PackedScene" uid="uid://b83hwoltxpxrq" path="res://scenes/fade_transition.tscn" id="2_uvdjg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvdjg"]
size = Vector2(20, 31)

[sub_resource type="Curve" id="Curve_hpvv5"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.1918605, 0.46067423), 15.460665, 15.460665, 0, 0, Vector2(0.39534885, 0.04494381), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Door" type="Node2D"]
script = ExtResource("1_hpvv5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_uvdjg")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Area2D"]
z_index = 10
amount = 2
speed_scale = 0.1
randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(10, 16)
gravity = Vector2(0, -980)
orbit_velocity_min = 2.0
orbit_velocity_max = 3.0
scale_amount_curve = SubResource("Curve_hpvv5")
color = Color(1, 0.80784315, 0.6039216, 0.7764706)

[node name="fade_transition" parent="." instance=ExtResource("2_uvdjg")]
visible = false

[node name="FadeTimer" type="Timer" parent="fade_transition"]
one_shot = true

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="fade_transition/FadeTimer" to="." method="_on_fade_timer_timeout"]
